[package]
name = "clangql"
authors = ["AmrDeveloper"]
version = "0.7.0"
edition = "2021"
description = "A tool to run SQL-like query on your C/C++ Abstract syntax tree"
license = "MIT"
repository = "https://github.com/amrdeveloper/clangql/"
documentation = "https://github.com/amrdeveloper/clangql"
readme = "README.md"
keywords = ["cli", "files", "language", "gitql", "clangql"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[dependencies]
gitql-core = "0.4.0"
gitql-std = "0.4.1"
gitql-cli = "0.27.0"
gitql-ast = "0.24.0"
gitql-parser = "0.26.0"
gitql-engine = "0.27.0"
atty = "0.2.14"
clang-sys = "1.8.1"
