[package]
name = "clangql"
authors = ["AmrDeveloper"]
version = "0.8.0"
edition = "2021"
description = "A tool to run SQL-like query on your C/C++ Abstract syntax tree"
license = "MIT"
repository = "https://github.com/amrdeveloper/clangql/"
documentation = "https://github.com/amrdeveloper/clangql"
readme = "README.md"
keywords = ["cli", "files", "language", "gitql", "clangql"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[dependencies]
gitql-core = "0.12.0"
gitql-std = "0.12.0"
gitql-cli = "0.35.0"
gitql-ast = "0.31.0"
gitql-parser = "0.34.0"
gitql-engine = "0.35.0"
clang-sys = { version = "1.8.1", features = ["clang_16_0"] }
dyn-clone = "1.0.17"
