[package]
name = "clangql"
authors = ["AmrDeveloper"]
version = "0.10.0"
edition = "2021"
description = "A tool to run SQL-like query on your C/C++ Abstract syntax tree"
license = "MIT"
repository = "https://github.com/amrdeveloper/clangql/"
documentation = "https://github.com/amrdeveloper/clangql"
readme = "README.md"
keywords = ["cli", "files", "language", "gitql", "clangql"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[dependencies]
gitql-core = "0.18.0"
gitql-std = "0.18.0"
gitql-cli = "0.41.0"
gitql-ast = "0.37.0"
gitql-parser = "0.40.0"
gitql-engine = "0.41.0"
clang-sys = { version = "1.8.1", features = ["clang_18_0"] }
dyn-clone = "1.0.19"

[profile.release]
codegen-units = 1
lto = true
